--- a/test.ipynb
+++ b/test.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "8147de24",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "7671f89e",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ce459277",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "id": "0a47deeb",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "id": "f1419a71",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
+   "id": "8bb7aca3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await page"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "f19f135a",
    "metadata": {},
    "outputs": [],
@@ -193,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "id": "b7459bee",
    "metadata": {},
    "outputs": [],
@@ -206,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "77f570a0",
    "metadata": {},
    "outputs": [],
@@ -233,6 +243,8 @@
     "    await element.apply(\"(elem) => elem.focus()\")\n",
     "    for actions in keyEvents:\n",
     "        action_list = actions.to_dict()\n",
+    "        from pprint import pprint\n",
+    "        pprint(action_list, sort_dicts=False)\n",
     "        \n",
     "        for action in action_list:\n",
     "            await element._tab.send(\n",
@@ -328,7 +340,6 @@
    "outputs": [],
    "source": [
     "import asyncio\n",
-    "\n",
     "a = KeyEvents.get_key_action(\"a\", event_type=KeyEventType.KEY_DOWN)\n",
     "b = KeyEvents.get_key_action(\"a\", event_type=KeyEventType.KEY_UP)\n",
     "\n",
@@ -338,6 +349,58 @@
     "await send_keys(writing_element, [a])\n",
     "# await asyncio.sleep(0.5)\n",
     "# await send_keys(writing_element, [b])   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "c5c9276c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'type_': <KeyEventType.KEY_DOWN: 'keyDown'>,\n",
+      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
+      "  'key': 'A',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
+      "  'text': 'A'}]\n",
+      "[{'type_': <KeyEventType.KEY_UP: 'keyUp'>,\n",
+      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
+      "  'key': 'A',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
+      "  'text': 'A'}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import asyncio\n",
+    "\n",
+    "m = KeyEvents.get_key_action(\"A\", KeyModifiers.Shift, KeyEventType.KEY_DOWN)\n",
+    "await send_keys(writing_element, [m])\n",
+    "await asyncio.sleep(3)\n",
+    "m = KeyEvents.get_key_action(\"A\", KeyModifiers.Shift, KeyEventType.KEY_UP)\n",
+    "await send_keys(writing_element, [m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "1dbcb27a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element._tab.send(\n",
+    "    cdp.input_.dispatch_key_event(\n",
+    "        \"keyDown\",\n",
+    "        commands=[\"selectAll\"]\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
