--- a/test.ipynb
+++ b/test.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "id": "8147de24",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "7671f89e",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "id": "0034166a",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "ce459277",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "0a47deeb",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f1419a71",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "8bb7aca3",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "id": "f19f135a",
    "metadata": {},
    "outputs": [],
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "b7459bee",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "77f570a0",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 20,
    "id": "8473a5b3",
    "metadata": {},
    "outputs": [],
@@ -401,6 +401,84 @@
     "        commands=[\"selectAll\"]\n",
     "    )\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b95c7c69",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord(\"A\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "be39f812",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element.apply(\"(elem) => elem.focus()\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8cc77b4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
+    "        \"keyDown\",\n",
+    "        key=\"Control\",\n",
+    "        code=\"ControlLeft\",\n",
+    "        windows_virtual_key_code=17,\n",
+    "        native_virtual_key_code=17,\n",
+    "        modifiers=KeyModifiers.Ctrl\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
+    "    \"keyDown\",\n",
+    "    text=\"A\",\n",
+    "    key=\"A\",\n",
+    "    code=\"KeyA\",\n",
+    "    windows_virtual_key_code=65,\n",
+    "    native_virtual_key_code=65,\n",
+    "    modifiers=KeyModifiers.Ctrl\n",
+    "))\n",
+    "\n",
+    "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
+    "        \"keyUp\",\n",
+    "        key=\"Control\",\n",
+    "        code=\"ControlLeft\",\n",
+    "        windows_virtual_key_code=17,\n",
+    "        native_virtual_key_code=17,\n",
+    "        # modifiers=KeyModifiers.Ctrl\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
+    "    \"keyUp\",\n",
+    "    text=\"a\",\n",
+    "    key=\"a\",\n",
+    "    code=\"KeyA\",\n",
+    "    windows_virtual_key_code=65,\n",
+    "    native_virtual_key_code=65,\n",
+    "))"
    ]
   }
  ],
