will test later :eyes:

--- a/test.ipynb
+++ b/test.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "8cc77b4b",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
     ")\n",
     "\n",
     "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
-    "    \"keyDown\",\n",
+    "    \"char\",\n",
     "    text=\"A\",\n",
     "    key=\"A\",\n",
     "    code=\"KeyA\",\n",
@@ -467,18 +467,17 @@
     "        code=\"ControlLeft\",\n",
     "        windows_virtual_key_code=17,\n",
     "        native_virtual_key_code=17,\n",
-    "        # modifiers=KeyModifiers.Ctrl\n",
     "    )\n",
     ")\n",
     "\n",
-    "await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
-    "    \"keyUp\",\n",
-    "    text=\"a\",\n",
-    "    key=\"a\",\n",
-    "    code=\"KeyA\",\n",
-    "    windows_virtual_key_code=65,\n",
-    "    native_virtual_key_code=65,\n",
-    "))"
+    "# await writing_element._tab.send(cdp.input_.dispatch_key_event(\n",
+    "#     \"keyUp\",\n",
+    "#     text=\"a\",\n",
+    "#     key=\"a\",\n",
+    "#     code=\"KeyA\",\n",
+    "#     windows_virtual_key_code=65,\n",
+    "#     native_virtual_key_code=65,\n",
+    "# ))"
    ]
   }
  ],
