--- a/test.ipynb
+++ b/test.ipynb
@@ -101,18 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "8147de24",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyEventType\n",
+    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyPressEvent\n",
     "from typing import List, Union"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "7671f89e",
    "metadata": {},
    "outputs": [],
@@ -128,14 +128,14 @@
     "            grapheme_iter = grapheme.graphemes(item)\n",
     "            for grapheme_char in grapheme_iter:\n",
     "                grapheme_char = str(grapheme_char)\n",
-    "                yield KeyEvents.get_key_action(grapheme_char, KeyModifiers.Default)\n",
+    "                yield KeyEvents.get_keyEvent(grapheme_char, KeyModifiers.Default)\n",
     "        elif isinstance(item, SpecialKeys):\n",
-    "            yield KeyEvents.get_key_action(\n",
-    "                item, KeyModifiers.Default, KeyEventType.DOWN_AND_UP\n",
+    "            yield KeyEvents.get_keyEvent(\n",
+    "                item, KeyModifiers.Default, KeyPressEvent.DOWN_AND_UP\n",
     "            )\n",
     "\n",
     "\n",
-    "    yield KeyEvents.get_key_action(\"a\", KeyModifiers.Ctrl, KeyEventType.CHAR)\n",
+    "    yield KeyEvents.get_keyEvent(\"a\", KeyModifiers.Ctrl, KeyPressEvent.CHAR)\n",
     "    # yield KeyEvents.get_key_action(\n",
     "    #         SpecialKeys.BACKSPACE, KeyModifiers.Default, KeyEventType.DOWN_AND_UP\n",
     "    #     )"
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "77f570a0",
    "metadata": {},
    "outputs": [],
@@ -242,7 +242,7 @@
     "    \n",
     "    await element.apply(\"(elem) => elem.focus()\")\n",
     "    for actions in keyEvents:\n",
-    "        action_list = actions.to_dict()\n",
+    "        action_list = actions.to_dict_basic()\n",
     "        from pprint import pprint\n",
     "        pprint(action_list, sort_dicts=False)\n",
     "        \n",
@@ -271,12 +271,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "7827353d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = KeyEvents.get_key_action(\"a\", KeyModifiers.Ctrl, KeyEventType.DOWN_AND_UP)\n",
+    "a = KeyEvents.get_keyEvent(\"a\", KeyModifiers.Ctrl, KeyPressEvent.DOWN_AND_UP)\n",
     "if a is not None:\n",
     "    all_vals[-1] = a"
    ]
@@ -340,8 +340,8 @@
    "outputs": [],
    "source": [
     "import asyncio\n",
-    "a = KeyEvents.get_key_action(\"a\", event_type=KeyEventType.KEY_DOWN)\n",
-    "b = KeyEvents.get_key_action(\"a\", event_type=KeyEventType.KEY_UP)\n",
+    "a = KeyEvents.get_keyEvent(\"a\", event_type=KeyPressEvent.KEY_DOWN)\n",
+    "b = KeyEvents.get_keyEvent(\"a\", event_type=KeyPressEvent.KEY_UP)\n",
     "\n",
     "if a is None or b is None:\n",
     "    raise ValueError(\"Failed to get key actions for 'a'\")\n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c5c9276c",
    "metadata": {},
    "outputs": [
@@ -381,10 +381,10 @@
    "source": [
     "import asyncio\n",
     "\n",
-    "m = KeyEvents.get_key_action(\"A\", KeyModifiers.Shift, KeyEventType.KEY_DOWN)\n",
+    "m = KeyEvents.get_keyEvent(\"A\", KeyModifiers.Shift, KeyPressEvent.KEY_DOWN)\n",
     "await send_keys(writing_element, [m])\n",
     "await asyncio.sleep(3)\n",
-    "m = KeyEvents.get_key_action(\"A\", KeyModifiers.Shift, KeyEventType.KEY_UP)\n",
+    "m = KeyEvents.get_keyEvent(\"A\", KeyModifiers.Shift, KeyPressEvent.KEY_UP)\n",
     "await send_keys(writing_element, [m])"
    ]
   },
@@ -478,6 +478,94 @@
     "#     windows_virtual_key_code=65,\n",
     "#     native_virtual_key_code=65,\n",
     "# ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1da98816",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prototype import KeyEvents, KeyModifiers, SpecialKeys, KeyPressEvent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e10d0eaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = KeyEvents.get_keyEvent(\"p\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "41f9b6f1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<prototype.KeyEvents at 0x7993b5dd05c0>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "62c6aae6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'type_': 'keyDown',\n",
+      "  'text': 'Shift',\n",
+      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
+      "  'key': 'Shift',\n",
+      "  'code': 'ShiftLeft',\n",
+      "  'windows_virtual_key_code': 16,\n",
+      "  'native_virtual_key_code': 16},\n",
+      " {'type_': <KeyPressEvent.DOWN_AND_UP: 'downAndUp'>,\n",
+      "  'text': 'P',\n",
+      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
+      "  'key': 'P',\n",
+      "  'code': 'KeyP',\n",
+      "  'windows_virtual_key_code': 80,\n",
+      "  'native_virtual_key_code': 80},\n",
+      " {'type_': <KeyPressEvent.KEY_UP: 'keyUp'>,\n",
+      "  'text': 'Shift',\n",
+      "  'modifiers': <KeyModifiers.Default: 0>,\n",
+      "  'key': 'Shift',\n",
+      "  'code': 'ShiftLeft',\n",
+      "  'windows_virtual_key_code': 16,\n",
+      "  'native_virtual_key_code': 16},\n",
+      " {'type_': <KeyPressEvent.KEY_UP: 'keyUp'>,\n",
+      "  'text': 'p',\n",
+      "  'modifiers': <KeyModifiers.Default: 0>,\n",
+      "  'key': 'p',\n",
+      "  'code': 'KeyP',\n",
+      "  'windows_virtual_key_code': 80,\n",
+      "  'native_virtual_key_code': 80}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "pprint(test.to_dict(), sort_dicts=False)"
    ]
   }
  ],
