--- a/test.ipynb
+++ b/test.ipynb
@@ -492,27 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "e10d0eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents.get_keyEvent(\"p\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
+    "test = KeyEvents.get_keyEvent(SpecialKeys.BACKSPACE, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift | KeyModifiers.Ctrl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "41f9b6f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<prototype.KeyEvents at 0x7993b5dd05c0>"
+       "<prototype.KeyEvents at 0x72ce66be2ba0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
+   "id": "646536b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KeyModifiers.Shift | KeyModifiers.Ctrl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -531,34 +552,48 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'type_': 'keyDown',\n",
-      "  'text': 'Shift',\n",
-      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
+      "[{'text': 'Control',\n",
+      "  'modifiers': 10,\n",
+      "  'key': 'Control',\n",
+      "  'code': 'ControlLeft',\n",
+      "  'windows_virtual_key_code': 17,\n",
+      "  'native_virtual_key_code': 17,\n",
+      "  'type_': 'keyDown'},\n",
+      " {'text': 'Shift',\n",
+      "  'modifiers': 10,\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
-      "  'native_virtual_key_code': 16},\n",
-      " {'type_': <KeyPressEvent.DOWN_AND_UP: 'downAndUp'>,\n",
-      "  'text': 'P',\n",
-      "  'modifiers': <KeyModifiers.Shift: 8>,\n",
-      "  'key': 'P',\n",
-      "  'code': 'KeyP',\n",
-      "  'windows_virtual_key_code': 80,\n",
-      "  'native_virtual_key_code': 80},\n",
-      " {'type_': <KeyPressEvent.KEY_UP: 'keyUp'>,\n",
-      "  'text': 'Shift',\n",
+      "  'native_virtual_key_code': 16,\n",
+      "  'type_': 'keyDown'},\n",
+      " {'text': 'Backspace',\n",
+      "  'modifiers': 10,\n",
+      "  'key': 'Backspace',\n",
+      "  'code': 'Backspace',\n",
+      "  'windows_virtual_key_code': 8,\n",
+      "  'native_virtual_key_code': 8,\n",
+      "  'type_': 'keyDown'},\n",
+      " {'text': 'Control',\n",
+      "  'modifiers': <KeyModifiers.Default: 0>,\n",
+      "  'key': 'Control',\n",
+      "  'code': 'ControlLeft',\n",
+      "  'windows_virtual_key_code': 17,\n",
+      "  'native_virtual_key_code': 17,\n",
+      "  'type_': 'keyUp'},\n",
+      " {'text': 'Shift',\n",
       "  'modifiers': <KeyModifiers.Default: 0>,\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
-      "  'native_virtual_key_code': 16},\n",
-      " {'type_': <KeyPressEvent.KEY_UP: 'keyUp'>,\n",
-      "  'text': 'p',\n",
-      "  'modifiers': <KeyModifiers.Default: 0>,\n",
-      "  'key': 'p',\n",
-      "  'code': 'KeyP',\n",
-      "  'windows_virtual_key_code': 80,\n",
-      "  'native_virtual_key_code': 80}]\n"
+      "  'native_virtual_key_code': 16,\n",
+      "  'type_': 'keyUp'},\n",
+      " {'text': 'Backspace',\n",
+      "  'modifiers': 10,\n",
+      "  'key': 'Backspace',\n",
+      "  'code': 'Backspace',\n",
+      "  'windows_virtual_key_code': 8,\n",
+      "  'native_virtual_key_code': 8,\n",
+      "  'type_': 'keyUp'}]\n"
      ]
     }
    ],
