update the keyorder and mroe testing

--- a/test.ipynb
+++ b/test.ipynb
@@ -492,27 +492,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "e10d0eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents.get_keyEvent(SpecialKeys.BACKSPACE, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift | KeyModifiers.Ctrl)"
+    "test = KeyEvents.get_keyEvent(SpecialKeys.SHIFT, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "41f9b6f1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<prototype.KeyEvents at 0x72ce66be2ba0>"
+       "<prototype.KeyEvents at 0x7321d01a59d0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "646536b9",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -552,48 +552,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'text': 'Control',\n",
-      "  'modifiers': 10,\n",
-      "  'key': 'Control',\n",
-      "  'code': 'ControlLeft',\n",
-      "  'windows_virtual_key_code': 17,\n",
-      "  'native_virtual_key_code': 17,\n",
-      "  'type_': 'keyDown'},\n",
-      " {'text': 'Shift',\n",
-      "  'modifiers': 10,\n",
+      "[{'text': 'Shift',\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
-      "  'type_': 'keyDown'},\n",
-      " {'text': 'Backspace',\n",
-      "  'modifiers': 10,\n",
-      "  'key': 'Backspace',\n",
-      "  'code': 'Backspace',\n",
-      "  'windows_virtual_key_code': 8,\n",
-      "  'native_virtual_key_code': 8,\n",
-      "  'type_': 'keyDown'},\n",
-      " {'text': 'Control',\n",
-      "  'modifiers': <KeyModifiers.Default: 0>,\n",
-      "  'key': 'Control',\n",
-      "  'code': 'ControlLeft',\n",
-      "  'windows_virtual_key_code': 17,\n",
-      "  'native_virtual_key_code': 17,\n",
-      "  'type_': 'keyUp'},\n",
+      "  'type_': 'keyDown',\n",
+      "  'modifiers': 8},\n",
       " {'text': 'Shift',\n",
-      "  'modifiers': <KeyModifiers.Default: 0>,\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
-      "  'type_': 'keyUp'},\n",
-      " {'text': 'Backspace',\n",
-      "  'modifiers': 10,\n",
-      "  'key': 'Backspace',\n",
-      "  'code': 'Backspace',\n",
-      "  'windows_virtual_key_code': 8,\n",
-      "  'native_virtual_key_code': 8,\n",
-      "  'type_': 'keyUp'}]\n"
+      "  'type_': 'keyDown',\n",
+      "  'modifiers': 8},\n",
+      " {'text': 'Shift',\n",
+      "  'key': 'Shift',\n",
+      "  'code': 'ShiftLeft',\n",
+      "  'windows_virtual_key_code': 16,\n",
+      "  'native_virtual_key_code': 16,\n",
+      "  'type_': 'keyUp',\n",
+      "  'modifiers': 0},\n",
+      " {'text': <SpecialKeys.SHIFT: ('Shift', 16)>,\n",
+      "  'key': <SpecialKeys.SHIFT: ('Shift', 16)>,\n",
+      "  'code': 'ShiftLeft',\n",
+      "  'windows_virtual_key_code': 16,\n",
+      "  'native_virtual_key_code': 16,\n",
+      "  'type_': 'keyUp',\n",
+      "  'modifiers': 0}]\n"
      ]
     }
    ],
