--- a/test.ipynb
+++ b/test.ipynb
@@ -497,54 +497,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents.get_keyEvent(SpecialKeys.SHIFT, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
+    "test = KeyEvents(\"a\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "41f9b6f1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<prototype.KeyEvents at 0x7321d01a59d0>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "646536b9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "KeyModifiers.Shift | KeyModifiers.Ctrl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -559,11 +517,11 @@
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyDown',\n",
       "  'modifiers': 8},\n",
-      " {'text': 'Shift',\n",
-      "  'key': 'Shift',\n",
-      "  'code': 'ShiftLeft',\n",
-      "  'windows_virtual_key_code': 16,\n",
-      "  'native_virtual_key_code': 16,\n",
+      " {'text': 'A',\n",
+      "  'key': 'A',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
       "  'type_': 'keyDown',\n",
       "  'modifiers': 8},\n",
       " {'text': 'Shift',\n",
@@ -573,11 +531,11 @@
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0},\n",
-      " {'text': <SpecialKeys.SHIFT: ('Shift', 16)>,\n",
-      "  'key': <SpecialKeys.SHIFT: ('Shift', 16)>,\n",
-      "  'code': 'ShiftLeft',\n",
-      "  'windows_virtual_key_code': 16,\n",
-      "  'native_virtual_key_code': 16,\n",
+      " {'text': 'a',\n",
+      "  'key': 'a',\n",
+      "  'code': 'KeyA',\n",
+      "  'windows_virtual_key_code': 65,\n",
+      "  'native_virtual_key_code': 65,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0}]\n"
      ]
