--- a/test.ipynb
+++ b/test.ipynb
@@ -492,17 +492,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "e10d0eaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test = KeyEvents(\"a\", KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift)"
+    "test = KeyEvents(SpecialKeys.ENTER, KeyPressEvent.DOWN_AND_UP, KeyModifiers.Shift | KeyModifiers.Alt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
+   "id": "3d4b9b57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<prototype.KeyEvents at 0x73ba384a7290>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "497b9191",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "48"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.getsizeof(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "62c6aae6",
    "metadata": {},
    "outputs": [
@@ -510,32 +554,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'text': 'Shift',\n",
+      "[{'text': 'Alt',\n",
+      "  'key': 'Alt',\n",
+      "  'code': 'AltLeft',\n",
+      "  'windows_virtual_key_code': 18,\n",
+      "  'native_virtual_key_code': 18,\n",
+      "  'type_': 'keyDown',\n",
+      "  'modifiers': 1},\n",
+      " {'text': 'Shift',\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyDown',\n",
-      "  'modifiers': 8},\n",
-      " {'text': 'A',\n",
-      "  'key': 'A',\n",
-      "  'code': 'KeyA',\n",
-      "  'windows_virtual_key_code': 65,\n",
-      "  'native_virtual_key_code': 65,\n",
+      "  'modifiers': 9},\n",
+      " {'text': 'Enter',\n",
+      "  'key': 'Enter',\n",
+      "  'code': 'Enter',\n",
+      "  'windows_virtual_key_code': 13,\n",
+      "  'native_virtual_key_code': 13,\n",
       "  'type_': 'keyDown',\n",
-      "  'modifiers': 8},\n",
+      "  'modifiers': 9},\n",
       " {'text': 'Shift',\n",
       "  'key': 'Shift',\n",
       "  'code': 'ShiftLeft',\n",
       "  'windows_virtual_key_code': 16,\n",
       "  'native_virtual_key_code': 16,\n",
       "  'type_': 'keyUp',\n",
+      "  'modifiers': 1},\n",
+      " {'text': 'Alt',\n",
+      "  'key': 'Alt',\n",
+      "  'code': 'AltLeft',\n",
+      "  'windows_virtual_key_code': 18,\n",
+      "  'native_virtual_key_code': 18,\n",
+      "  'type_': 'keyUp',\n",
       "  'modifiers': 0},\n",
-      " {'text': 'a',\n",
-      "  'key': 'a',\n",
-      "  'code': 'KeyA',\n",
-      "  'windows_virtual_key_code': 65,\n",
-      "  'native_virtual_key_code': 65,\n",
+      " {'text': 'SpecialKeys.ENTER',\n",
+      "  'key': 'SpecialKeys.ENTER',\n",
+      "  'code': 'Enter',\n",
+      "  'windows_virtual_key_code': 13,\n",
+      "  'native_virtual_key_code': 13,\n",
       "  'type_': 'keyUp',\n",
       "  'modifiers': 0}]\n"
      ]
@@ -544,7 +602,7 @@
    "source": [
     "from pprint import pprint\n",
     "\n",
-    "pprint(test.to_dict(), sort_dicts=False)"
+    "pprint(test.to_cdp_events(), sort_dicts=False)"
    ]
   }
  ],
